--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="text/javascript" src="/js/bundle.js"></script>
   </body>
 </html>
